fix(search-street): improve contrast for hovered dropdown item

--- a/app/styles/ember-ebau-gwr.scss
+++ b/app/styles/ember-ebau-gwr.scss
@@ -11,7 +11,8 @@ $ember-power-select-trigger-icon-color: transparent;
     @extend .uk-invisible;
   }
 
-  .ember-power-select-option:hover > small {
+  .ember-power-select-option:hover > small,
+  .ember-power-select-option[aria-current="true"] > small {
     mix-blend-mode: multiply;
   }
 }
